// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Applications create key dates GET /key-dates should render the page 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <h1 class=\\"govuk-heading-l\\"> Enter the key dates of the project</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"keyDates.submissionDatePublished\\">Anticipated submission date published</label>
            <div id=\\"keyDates.submissionDatePublished-hint\\"
            class=\\"govuk-hint\\">for example, Q4 2023</div>
            <input class=\\"govuk-input govuk-!-width-one-third\\"
            id=\\"keyDates.submissionDatePublished\\" name=\\"keyDates.submissionDatePublished\\"
            type=\\"text\\" aria-describedby=\\"keyDates.submissionDatePublished-hint\\">
        </div>
        <div class=\\"govuk-form-group \\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"submissionDateInternal\\">Anticipated submission date internal</label>
            <div id=\\"submissionDateInternal-hint\\"
            class=\\"govuk-hint\\">for example, 27 03 2023</div>
            <div class=\\"govuk-grid-column-one-third\\">
                <div class=\\"govuk-grid-row pins-date-form-group\\">
                    <div class=\\"govuk-form-group\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"keyDates.submissionDateInternal.day\\">Day</label>
                        <input class=\\"govuk-input\\" id=\\"keyDates.submissionDateInternal.day\\"
                        name=\\"keyDates.submissionDateInternal.day\\" type=\\"text\\">
                    </div>
                    <div class=\\"govuk-form-group\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"keyDates.submissionDateInternal.month\\">Month</label>
                        <input class=\\"govuk-input\\" id=\\"keyDates.submissionDateInternal.month\\"
                        name=\\"keyDates.submissionDateInternal.month\\" type=\\"text\\">
                    </div>
                    <div class=\\"govuk-form-group\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"keyDates.submissionDateInternal.year\\">Year</label>
                        <input class=\\"govuk-input\\" id=\\"keyDates.submissionDateInternal.year\\"
                        name=\\"keyDates.submissionDateInternal.year\\" type=\\"text\\">
                    </div>
                </div>
            </div>
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and continue</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Applications create key dates POST /key-dates Web-side validation: should show validation errors if dates are not valid 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" data-module=\\"govuk-error-summary\\">
                <div role=\\"alert\\">
                    <h2 class=\\"govuk-error-summary__title\\"> There is a problem</h2>
                    <div class=\\"govuk-error-summary__body\\">
                        <ul class=\\"govuk-list govuk-error-summary__list\\">
                            <li><a href=\\"#keyDates.submissionDateInternal\\">Enter a valid day for the anticipated submission date internal</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <h1 class=\\"govuk-heading-l\\"> Enter the key dates of the project</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"keyDates.submissionDatePublished\\">Anticipated submission date published</label>
            <div id=\\"keyDates.submissionDatePublished-hint\\"
            class=\\"govuk-hint\\">for example, Q4 2023</div>
            <input class=\\"govuk-input govuk-!-width-one-third\\"
            id=\\"keyDates.submissionDatePublished\\" name=\\"keyDates.submissionDatePublished\\"
            type=\\"text\\" aria-describedby=\\"keyDates.submissionDatePublished-hint\\">
        </div>
        <div class=\\"govuk-form-group govuk-form-group--error\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"submissionDateInternal\\">Anticipated submission date internal</label>
            <div id=\\"submissionDateInternal-hint\\"
            class=\\"govuk-hint\\">for example, 27 03 2023</div>
            <p id=\\"submissionDateInternal-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> Enter a valid day for
                the anticipated submission date internal</p>
            <div class=\\"govuk-grid-column-one-third\\">
                <div class=\\"govuk-grid-row pins-date-form-group\\">
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"keyDates.submissionDateInternal.day\\">Day</label>
                        <p id=\\"keyDates.submissionDateInternal.day-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"keyDates.submissionDateInternal.day\\"
                        name=\\"keyDates.submissionDateInternal.day\\" type=\\"text\\" value=\\"01\\" aria-describedby=\\"keyDates.submissionDateInternal.day-error\\">
                    </div>
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"keyDates.submissionDateInternal.month\\">Month</label>
                        <p id=\\"keyDates.submissionDateInternal.month-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"keyDates.submissionDateInternal.month\\"
                        name=\\"keyDates.submissionDateInternal.month\\" type=\\"text\\" value=\\"01\\" aria-describedby=\\"keyDates.submissionDateInternal.month-error\\">
                    </div>
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"keyDates.submissionDateInternal.year\\">Year</label>
                        <p id=\\"keyDates.submissionDateInternal.year-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"keyDates.submissionDateInternal.year\\"
                        name=\\"keyDates.submissionDateInternal.year\\" type=\\"text\\" value=\\"2032\\" aria-describedby=\\"keyDates.submissionDateInternal.year-error\\">
                    </div>
                </div>
            </div>
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and continue</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Applications create key dates POST /key-dates Web-side validation: should show validation errors if submission date is not in the future 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" data-module=\\"govuk-error-summary\\">
                <div role=\\"alert\\">
                    <h2 class=\\"govuk-error-summary__title\\"> There is a problem</h2>
                    <div class=\\"govuk-error-summary__body\\">
                        <ul class=\\"govuk-list govuk-error-summary__list\\">
                            <li><a href=\\"#keyDates.submissionDateInternal\\">The anticipated submission date internal must be in the future</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <h1 class=\\"govuk-heading-l\\"> Enter the key dates of the project</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"keyDates.submissionDatePublished\\">Anticipated submission date published</label>
            <div id=\\"keyDates.submissionDatePublished-hint\\"
            class=\\"govuk-hint\\">for example, Q4 2023</div>
            <input class=\\"govuk-input govuk-!-width-one-third\\"
            id=\\"keyDates.submissionDatePublished\\" name=\\"keyDates.submissionDatePublished\\"
            type=\\"text\\" aria-describedby=\\"keyDates.submissionDatePublished-hint\\">
        </div>
        <div class=\\"govuk-form-group govuk-form-group--error\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"submissionDateInternal\\">Anticipated submission date internal</label>
            <div id=\\"submissionDateInternal-hint\\"
            class=\\"govuk-hint\\">for example, 27 03 2023</div>
            <p id=\\"submissionDateInternal-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> The anticipated submission
                date internal must be in the future</p>
            <div class=\\"govuk-grid-column-one-third\\">
                <div class=\\"govuk-grid-row pins-date-form-group\\">
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"keyDates.submissionDateInternal.day\\">Day</label>
                        <p id=\\"keyDates.submissionDateInternal.day-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"keyDates.submissionDateInternal.day\\"
                        name=\\"keyDates.submissionDateInternal.day\\" type=\\"text\\" value=\\"14\\" aria-describedby=\\"keyDates.submissionDateInternal.day-error\\">
                    </div>
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"keyDates.submissionDateInternal.month\\">Month</label>
                        <p id=\\"keyDates.submissionDateInternal.month-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"keyDates.submissionDateInternal.month\\"
                        name=\\"keyDates.submissionDateInternal.month\\" type=\\"text\\" value=\\"07\\" aria-describedby=\\"keyDates.submissionDateInternal.month-error\\">
                    </div>
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"keyDates.submissionDateInternal.year\\">Year</label>
                        <p id=\\"keyDates.submissionDateInternal.year-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"keyDates.submissionDateInternal.year\\"
                        name=\\"keyDates.submissionDateInternal.year\\" type=\\"text\\" value=\\"1789\\" aria-describedby=\\"keyDates.submissionDateInternal.year-error\\">
                    </div>
                </div>
            </div>
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and continue</button>
            </div>
        </div>
    </form>
</main>"
`;
